--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "4.1.5",
     "com.unity.collab-proxy": "1.3.9",
+    "com.unity.device-simulator": "3.0.1-preview",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.3",
     "com.unity.ide.vscode": "1.2.2",
