--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.animation": "4.2.8",
     "com.unity.2d.spriteshape": "4.1.5",
+    "com.unity.ads": "3.7.5",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.device-simulator": "3.0.1-preview",
     "com.unity.ide.rider": "1.2.1",
